# blender-threejs-bakes

./: .gitignore  .prettierignore  AGENTS.md  CONVENTIONS.md  DESIGN.md  README.md  eslint.config.js  justfile  lefthook.yml  package-lock.json  package.json  pyproject.toml  wrangler.hair-pages.toml
.github/: pull_request_template.md
assets/: manifest.json  manifest.receipt.json
assets/glb/: spacex_starship_sn8.glb
assets/source_blends/: spacex_starship_sn8.blend  spacex_starship_sn8_local.blend
docs/: BAKE_TELEMETRY.md  BOX3D_ANIMATION.md  BOX3D_CONTACT_SHELL.md  BOX3D_NATIVE_CONVENTIONS.md  HAIRCUT_SIMULATOR_DIRECTION.md  HAIR_BOX3D_SWATCH.md  HAIR_EXTERNAL_REVIEW_20260711.md  HAIR_HERO_CUT_VIDEOS.md  HAIR_MATERIAL_BENCH.md  HAIR_OPERATOR_AB_REPLAY.md  HAIR_PHASE_SPACE_VIDEOS.md  INTEGRATION_HANDOFF.md  JGS2_COMPLIANCE_LAB.md  MANNEQUIN_HAIRCUT.md  REDUCED_TREE_ELASTODYNAMICS.md  SCENE_STATE.md  SEEDTHREE_TREE_ASSEMBLY.md  SEEDTHREE_WIND_CANOPY.md  SOFT_RIBBON.md  WIND_GARDEN.md
docs/receipts/: hair_box3d_scalp_scale_v1.json  hair_box3d_stiction_ab_v1.json  hair_box3d_swatch_v1.json  hair_compliant_root_owner_transport_checkpoint.md  hair_control_tube_hydration.md  hair_curated_scenes_v1.json  hair_cut_donor_fade_ab.md  hair_disney_breadth_lab_v1.json  hair_fiber_coverage_v2.md  hair_fiber_shading_loop.md  hair_full_groom_hydration.md  hair_hero_cut_batch.json  hair_hero_cut_scenarios.json  hair_hero_reel_shots.md  hair_hydrated_wind_response.md  hair_hydration_audition_v1.json  hair_layered_mass_fill_v1.json  hair_lock_aware_coverage.md  hair_material_bench.json  hair_mechanical_skeleton.md  hair_operator_ab_replay.json  hair_phase_space_batch.json  hair_phase_space_scenarios.json  hair_root_field_ab.md  hair_scalp_face_placement.md  (+8 more)
editor/: asset-metadata.js  camera-actions.js  default-scale.js  effects.js  framing.js  index.html  inspector.js  instances.js  layout-io.js  lighting.js  main.js  manifest-loader.js  motion-controls.js  motion-player.js  proxies.js  render-ui.js  scene.js  selection.js  styles.css  ui.js  uniform-scale.js
jobs/: basic_crate.render.json  basic_crate.simulation.json  example.render.json
layouts/: 2026-06-26_02-47-51-779Z_mushroom.layout.json  2026-06-26_02-51-53-148Z_mushroom.layout.json  2026-06-26_02-52-35-065Z_mushroom.layout.json  2026-06-26_02-54-07-581Z_mushroom.layout.json  2026-06-26_02-59-52-315Z_japanese_zen_shrine_asian_temple.layout.json  2026-06-26_03-00-30-430Z_statue.layout.json  2026-06-26_03-01-32-815Z_mushroom_plant_scan_rubble_ruins.layout.json  2026-06-26_03-10-10-170Z_lava_asteroid_statue_terrified_alien_octopus_toy.layout.json  2026-06-26_03-19-50-518Z_medieval_prop_crate_medieval_stairs.layout.json  2026-06-26_03-21-54-848Z_medieval_prop_crate_bone_broken_nasa_sls_core_stage.layout.json  2026-06-28_starship_shrine_spaceport.layout.json  20260626T014835656731Z_first_composition.layout.json  20260626T024354157794Z_first_composition.layout.json  20260626T024434894878Z_first_composition.layout.json  cuda_effect_palette.layout.json  live.layout.json  starship_cuda_three_nozzle_flames.layout.json
physics/: CMakeLists.txt  box3d_scene_runner.c
physics/labs/contact_shell/: CMakeLists.txt  contact_shell.c  contact_shell.h  contact_shell.ml  contact_shell_probe.c
physics/labs/contact_shell/demo/: fixture.json  index.html  main.js  styles.css
physics/labs/hair_box3d_swatch/: CMakeLists.txt  hair_box3d_swatch.c  hair_stiction.c  hair_stiction.h
physics/labs/hair_material/: COMB_BENCHMARK.md  PLAN.md  ROD_REFERENCE.md  SPATIAL_DISCOVERY.md
physics/labs/hair_material/demo/: authored_groom.js  biological_scalp_flow.js  box3d_clip.js  contact_churn.js  contact_discovery.js  curated_scenes.js  display_follicles.js  friction.js  groom_envelope.js  groom_interpolation.js  hair_mass_fill.js  hairline_flow.js  index.html  layered_haircut.js  lock_laminae.js  main.js  rendering.js  replay.js  rod_reference.js  root_director.js  root_style_field.js  scalp_layout.js  solver.js  sparse_groom_cage.js  spatial_friction.js  styles.css
physics/labs/hair_material/demo/assets/: README.md  box3d_scalp_groom_256.meta.json  box3d_scalp_groom_256.positions.i16  box3d_scalp_groom_64.meta.json  box3d_scalp_groom_64.positions.i16  realistic-head-animation.glb
physics/labs/hair_material/proofs/: pair_constraint.ml
physics/labs/jgs2_compliance/: CMakeLists.txt  chain_quadratic.c  chain_quadratic.h  compliance_chain.c
physics/labs/soft_ribbon/: CMakeLists.txt  soft_ribbon.c
physics/labs/wind_garden/: CMakeLists.txt  wind_garden.c
presets/: cave_octopus_relic.preset.json  medieval_market_relic.preset.json  starship_shrine_spaceport.preset.json
recipes/: seedthree_tree_assembly.json
renders/: 2026-06-28_18-31-40-631Z_starship_shrine_spaceport.receipt.json
scenes/: basic_crate_drop.scene.json  example.scene.json
schemas/: composition-preset.schema.json  layout.schema.json  manifest.schema.json  motion-clip.schema.json  render-job.schema.json  scene-state.schema.json  shot.schema.json  simulation-events.schema.json  simulation-job.schema.json
scripts/: asset_texture_report.py  bake_telemetry.py  blender.sh  bt.py  build_basic_animation.sh  build_chain_lab.sh  build_contact_shell.sh  build_hair_box3d_swatch.sh  build_hair_pages.mjs  build_mannequin_haircut.sh  build_reduced_tree_animation.sh  build_seedthree_wind_canopy.sh  build_soft_ribbon.sh  build_tree_assembly_animation.sh  build_wind_garden.sh  check_commit_msg.sh  check_lighting_presets.py  compile_physics.py  compile_scene.py  compile_tree_assembly.py  editor_server.py  export_hair_box3d_clip.mjs  export_proxies.py  haircut_math.py  import_external_assets.py  lighting_model.py  package_chain_lab.py  package_hair_phase_space_videos.sh  package_mannequin_haircut_receipt.py  package_mannequin_haircut_video.sh  package_seedthree_wind_receipt.py  package_seedthree_wind_video.sh  package_soft_ribbon.py  package_wind_garden.py  qa_hair_canary.mjs  render_hair_box3d_swatch_preview.py  render_layout.py  render_mannequin_haircut.py  render_motion.py  render_reduced_tree.py  (+32 more)
(+11 files in other folders)
